[package]
name = "picocode"
version = "0.2.0"
authors = ["Dotan Nahum <dotan@rng0.io>"]
edition = "2021"
description = "A minimal, Rust-based implementation similar to Claude Code"
license = "MIT"
repository = "https://github.com/jondot/picocode"
homepage = "https://github.com/jondot/picocode"
readme = "README.md"
keywords = ["cli", "ai", "coding-assistant", "llm", "agent"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["picocode.gif", ".github/"]

[dependencies]
rig-core = { version = "0.28.0", features = ["derive"] }
rig-derive = "0.1.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "2.0.17"
indicatif = "0.18.3"
regex = "1.0"
schemars = "1.2.0"
ignore = "0.4.25"
globset = "0.4.18"
tracing = "0.1.44"
console = "0.16.2"
termimad = "0.34.1"
duct = "1.1.1"
duct_sh = "1.0.0"
async-trait = "0.1"
openssl = { version = "0.10", features = ["vendored"] }

[lib]
name = "picocode"
path = "src/lib.rs"

[[bin]]
name = "picocode"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.24.0"
